# EasyOCR-ONNX

./: .gitignore  AGENT.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
benchmarks/: bench_pytorch_vs_onnx.py  results_coreml.json  results_quick.json
notebooks/: convert.py
src/easyocr_onnx/: __init__.py  cli.py  reader.py
tests/: conftest.py  test_integration.py  test_preprocessing.py
